data/all_generated_tests/raw_wast_tests/br_table_TypeMismatchinControlFlowInstructions_2458.wast
;; 8. **Test: Forward Branch with Incompatible Block Types**    - **Description**:      A `br_table` instruction forward branching into a block that expects an `i64` type but receiving an `f32` operand.    - **Constraint Checked**:      Checks proper type enforcement during forward branch operations.    - **Related Type Mismatch**:      Incompatible types during forward branching.

(assert_invalid
  (module
    (func
      (block (result i64)
        (br_table 0 (f32.const 0))
      )
    )
  )
  "type mismatch"
)